[package]
name = "kec-calculator"
version = "1.0.0"
description = "KEC 전선관/허용전류 산출 프로그램"
authors = ["Earl"]
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
